--- a/.github/workflows/accumulate.yml
+++ b/.github/workflows/accumulate.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Install Python3
         uses: actions/setup-python@v2
